[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "olx-cars-mcp"
version = "0.1.0"
description = "MCP server for querying OLX Lebanon cars-for-sale data (deals, prices, market stats)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2",
    "psycopg[binary]>=3.1",
]

[project.scripts]
olx-cars-mcp = "olx_cars_mcp.__main__:main"

[tool.setuptools]
packages = ["olx_cars_mcp"]
